--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ p {
     font-size: 20px;
     font-family: cursive;
 }
+header{
+    border-bottom: solid 2px rgb(42, 122, 228);
+    margin: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
