--- a/style.css
+++ b/style.css
@@ -43,3 +43,10 @@ section{
     padding-left: 20px;
     padding-right: 20px;
 }
+.categoria-videos img {
+     opacity: 0.5;
+}
+
+.categoria-videos img:hover {
+     opacity: 1.0;
+}
